--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
+  <!-- 1. добавить lazy loading -->
+  <!-- 2. добавить запоминание позиции на странице с последнего посещения юзера -->
+  <!-- 3. добавить модалки? -->
+  <!-- 4. добавить ховер/фокус -->
+
   <body>
     <header class="header">
       <div class="container">
