--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <!-- 2. добавить запоминание позиции на странице с последнего посещения юзера -->
   <!-- 3. добавить модалки? -->
   <!-- 4. добавить ховер/фокус -->
+  <!-- 5. добавить адаптивность -->
 
   <body>
     <header class="header">
